@startuml Payment Class Diagram
skinparam linetype ortho

interface BachelorCardData {
    String name
    String cardNumber
    String securityCode
    String expirationDate
}

interface SwpSafeData {
    String swpCode
}

interface HciPalData {
    String accountName
    String accountPassword
}

abstract PaymentService {
    + Promise<{ Number status, String message }> getCountryCode(BachelorCardData | SwpSafeData | HciPalData dataObject)
    + Promise<{ Number status, String message }> initTransaction(BachelorCardData | SwpSafeData | HciPalData dataObject, Number amount)
    + Promise<{ Number status, String message }> commitTransaction(String token)
    + Promise<{ Number status, String message }> rollbackTransaction(String token)
    - Promise<{status: number, message: string}> processResponse(String data, String fieldWanted)
}

entity Frontend

class BachelorCard

class HciPal

class SwpSafe

class Scooter {
    id: int
    product_id : string
    battery: float
    coordinates_lat: float
    coordinates_lng: float
    active_rental_id: int
    reservation_id: int
}

class Rental {
    id: int
    endedAt: Date
    createdAt: Date
    user_id: int
    scooter_id: int
}

class Reservation{
    id: int
    endedAt: Date
    user_id: int
    scooter_id: int
}

class Database {
    Sequelize sequelize

    + Sequelize getSequelize()
    + connect()
}

class PaymentController {
    + Promise<void> getAllPaymentMethods(Request request, Response response)
    + Promise<void> addBachelorCard(Request request, Response response)
    + Promise<void> addHciPal(Request request, Response response)
    + Promise<void> addSwpSafe(Request request, Response response)
    + Promise<void> deletePayment(Request request, Response response)
}

class CheckoutController {
    + Promise<void> processCheckout(Request request, Response response)
}

class RentalManager {
    + Promise<Model> startRental(Number userId, Number scooterId, Number duration)
    + Promise<void> endRental(Rental rental)
}

class ReservationManager {
    + Promise<Model> startReservation(Number userId, Number scooterId)
    + Promise<void> endReservation(Reservation reservation)
}

PaymentService <|-- BachelorCard : implements
PaymentService <|-- HciPal : implements
PaymentService <|-- SwpSafe : implements

PaymentController -u-> BachelorCard : uses
PaymentController -u-> HciPal : uses
PaymentController -u-> SwpSafe : uses
PaymentController -d-> Database : queries

CheckoutController -d-> Database : queries
CheckoutController -d-> RentalManager : use
CheckoutController -l-> ReservationManager : use
CheckoutController -r-> PaymentController : use

HciPal -r-> HciPalData : use
BachelorCard -r-> BachelorCardData : use
SwpSafe -r-> SwpSafeData : use

RentalManager -u-> Scooter : manages instances of
RentalManager -u-> Reservation : manages instances of
RentalManager -u-> Rental : manages instances of

ReservationManager -d-> Scooter : manages instances of
ReservationManager -d-> Reservation : manages instances of
ReservationManager -d-> Rental : manages instances of

Frontend <-d-> CheckoutController : communicate
Frontend <-d-> PaymentController : communicate

Scooter -> Database : stored in
Rental -> Database : stored in
Reservation -> Database : stored in

@enduml